--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,28 +9,33 @@ services:
         container_name: node1
         environment:
                 - LD_PRELOAD=/usr/local/lib/faketime/libfaketime.so.1
+                - FAKETIME_NO_CACHE=1
     nix2-service:
         image: nix-image
         tty: true
         container_name: node2
         environment:
                 - LD_PRELOAD=/usr/local/lib/faketime/libfaketime.so.1
+                - FAKETIME_NO_CACHE=1
     nix3-service:
         image: nix-image
         tty: true
         container_name: node3
         environment:
                 - LD_PRELOAD=/usr/local/lib/faketime/libfaketime.so.1
+                - FAKETIME_NO_CACHE=1
     nix4-service:
         image: nix-image
         tty: true
         container_name: node4
         environment:
                 - LD_PRELOAD=/usr/local/lib/faketime/libfaketime.so.1
+                - FAKETIME_NO_CACHE=1
     nix5-service:
         image: nix-image
         tty: true
         container_name: node5
         environment:
                 - LD_PRELOAD=/usr/local/lib/faketime/libfaketime.so.1
+                - FAKETIME_NO_CACHE=1
 
